--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
 
 
     <string name="default_notification_channel_id">proman_notification_channel_id</string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
